--- a/template.env
+++ b/template.env
@@ -3,5 +3,8 @@ PREFIX=an!
 TOKEN=AaaOoOOOoaAooOOOOAOaooaoOOAOOAOoo.AOOAOAOOAOao.OAOAOAOOA
 MONGO_URL=mongodb://localhost:27017/AnataTS
 
+GUILD_ID=00000000000000000
+CLIENT_ID=000000000000000000
+
 SPOTIFY_ID=YOURSPOTIFYID
 SPOTIFY_SECRET=YOURSPOTIFYSECRET
